# cedica-management-system

./: README.md  app.py
admin/: .gitignore  README.md  app.py  flake.nix  pyproject.toml
admin/src/core/: config.py  database.py  seeds.py
admin/src/core/auth/: __init__.py  employee.py  user.py  users.py
admin/src/core/board/: __init__.py  horse.py  issue.py  jinetesAmazona.py  label.py  payment.py  permission.py  receipt.py  role.py
admin/src/core/models/: __init__.py  action.py  assignment.py  contact.py  content.py  day.py  document.py  employee.py  grafic.py  horse.py  payment.py  permission.py  receipt.py  rider.py  role.py  tutor.py  user.py
admin/src/core/repositories/: action.py  assignment.py  contact.py  content.py  day.py  document.py  employee.py  grafic.py  horse.py  payment.py  permission.py  receipt.py  report.py  riders.py  role.py  tutor.py  user.py
admin/src/core/validation/: validator.py
admin/src/web/: __init__.py  storage.py
admin/src/web/api/: __init__.py  articles.py  messages.py
admin/src/web/controllers/: __init__.py  auth.py  contacts.py  contents.py  documents.py  employees.py  horses.py  issue.py  payments.py  receipt.py  report.py  riders.py  users.py
admin/src/web/handlers/: error.py
admin/src/web/helpers/: auth.py  documentation.py  flash.py
admin/src/web/schemas/: articleStatus.py  articles.py  contactStatus.py  messages.py  user.py
admin/src/web/templates/: about.html  base_form.html  base_index.html  base_index2.html  base_show.html  create_user.html  error.html  error401.html  forbidden.html  home.html  layout.html
admin/static/: error.css  style.css
(+99 files in other folders)
