[tool.poetry]
name = "grupo10"
version = "0.1.0"
description = ""
authors = ["Ulises Britos <ubritos@gmail.com>"]
#license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
