[tool.poetry]
name = "grupo10"
version = "0.1.0"
description = ""
authors = ["Ulises Britos <ubritos@gmail.com>"]
#license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
minio = "^7.2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.basedpyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
